# libdaemon

./: CMakeLists.txt  README.md  package.json
.github/workflows/: test.yml
include/: daemon.h
include/daemon/: posix.h  win32.h
src/: posix.c  win32.c
test/: CMakeLists.txt  basic.c  file-missing.c  writev.c
test/fixtures/: CMakeLists.txt  sleep.c  writev-stdout.c
